# storage-telemetry-analytics-v3

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
assets/sample_reports/: storage_telemetry_summary.html  storage_telemetry_summary.md
configs/: anomaly.yaml  app.yaml  database.yaml  features.yaml  logging.yaml  paths.yaml
dags/: storage_telemetry_dag.py
dashboards/grafana/: dashboard_wireframes.md
dashboards/tableau/: tableau_model_design.md
data/raw/: generated_iostat.csv
docs/: architecture.md  data_model.md  oldcli.py  oldsql_assistant.py  reporting_strategy.md
notebooks/: 01_data_profile.ipynb  02_exploratory_io_analysis.ipynb  03_anomaly_detection_analysis.ipynb  04_root_cause_and_workload_analysis.ipynb  05_dashboard_dataset_validation.ipynb  06_reporting_validation.ipynb
notebooks/utils/: notebook_helpers.py
pipelines/: anomaly_detection.py  build_marts.py  load_raw_to_postgres.py  spark_transform.py  validate_dashboard_datasets.py
scripts/: create_db.py  generate_sample_data.py  inspect_db.py  run_batch_pipeline.py
sql/marts/: fact_device_hourly.sql  fact_device_percentiles.sql  fact_device_timeseries.sql  mart_device_run_summary.sql  mart_tableau_anomaly_timeline.sql  mart_tableau_device_overview.sql  mart_tableau_root_cause_summary.sql
sql/views/: v_curated_device_metrics.sql  v_grafana_device_health.sql  v_latest_run.sql
src/storage_telemetry/: __init__.py  cli.py
src/storage_telemetry_analytics.egg-info/: PKG-INFO  SOURCES.txt  (+2 more)
tests/: test_detection.py  test_features.py  test_ingestion.py  test_marts.py
(+55 files in other folders)
